# java-client-kubevirt

./: .gitignore  .project  .stdci.yaml  INSTALL  Makefile.am  README.md  build.gradle  config.json  configure.ac  java-client-kubevirt.spec.in  kubevirt-swagger.json  pom.xml  pom.xml.in  settings.gradle
.automation/: build-rpm.sh  build-srpm.sh
.copr/: Makefile
.github/: CODEOWNERS
.github/workflows/: build.yml
automation/: build-artifacts-manual.sh  build-artifacts.packages  build-artifacts.packages.el7  build-artifacts.repos.el7  build-artifacts.repos.el9stream  build-artifacts.sh  check-patch.sh  prepare-maven.sh
src/main/java/kubevirt/: ApiCallback.java  ApiClient.java  ApiException.java  ApiResponse.java  Configuration.java  GzipRequestInterceptor.java  JSON.java  Pair.java  ProgressRequestBody.java  ProgressResponseBody.java  StringUtil.java
src/main/java/kubevirt/auth/: ApiKeyAuth.java  Authentication.java  HttpBasicAuth.java  OAuth.java  OAuthFlow.java
src/main/java/kubevirt/io/: DefaultApi.java  K8sCniCncfIoV1Api.java  KubevirtApi.java  TypesUID.java  V1APIGroup.java  V1APIGroupList.java  V1APIResource.java  V1APIResourceList.java  V1Affinity.java  V1BIOS.java  V1Bootloader.java  V1CDRomTarget.java  V1CPU.java  V1CPUFeature.java  V1Chassis.java  V1Clock.java  V1ClockOffsetTimezone.java  V1ClockOffsetUTC.java  V1CloudInitConfigDriveSource.java  V1DHCPOptions.java  (+137 more)
src/main/java/test/: Main.java  Nodes.java  Routes.java  Templates.java  VirtualMachines.java
src/main/resources/: toolchains.xml
src/test/java/test/: Nodes.java  Templates.java
(+9 files in other folders)
